--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "angular2": "2.0.0-alpha.46",
+    "angular2": "2.0.0-beta.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.1",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-stage-1": "^6.1.18",
     "babelify": "^7.2.0",
     "browserify": "^12.0.1",
     "http-server": "^0.8.5",
-    "onsenui": "^2.0.0-beta",
+    "onsenui": "^2.0.0-beta.2",
     "reflect-metadata": "^0.1.2",
     "watchify": "^3.6.1",
     "zone.js": "^0.5.8"
@@ -30,6 +31,9 @@
           "presets": [
             "es2015",
             "stage-1"
+          ],
+          "plugins": [
+            "babel-plugin-transform-decorators-legacy"
           ]
         }
       ]
